# sssp_research_lab

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  ROADMAP.md  pyproject.toml  references.bib
.github/workflows/: ci.yml
benchmarks/: smoke.csv
docs/: algorithm_matrix.md  alt_notes.md  benchmarking.md  bmssp_implementation_notes.md  contraction_hierarchies_notes.md  faster_directed_sssp_notes.md  negative_weight_near_linear_notes.md  packaging.md  papers.md  release_process.md  roadmap.md  rust_acceleration.md  thorup_integer_notes.md  validation.md
docs/articles/: 01_why_dijkstra_sorts_too_much.md  02_buckets_and_radix_heaps.md  03_delta_stepping.md  04_bmssp_and_sorting_barrier.md  05_alt_and_contraction_hierarchies.md  06_negative_weights.md
examples/: basic_usage.py
rust/sssp_accel/: Cargo.toml  pyproject.toml
rust/sssp_accel/src/: lib.rs
scripts/: benchmark_alt.py  benchmark_ch.py  benchmark_delta_sweep.py  benchmark_frontier.py  benchmark_negative.py  benchmark_parallel_delta.py  benchmark_rust_accel.py  benchmark_smoke_suite.py  benchmark_sssp.py  benchmark_stepping_policies.py  benchmark_thorup.py  build_rust_extension.py  install_built_rust_extension.py  profile_rust_accel.py
src/sssp_lab/: __init__.py  cli.py  graph.py  utils.py
src/sssp_lab/algorithms/: alt.py  (+15 more)
tests/: test_algorithm_properties.py  test_alt_ch_and_frontiers.py  test_benchmark_exports.py  test_benchmark_rust_accel.py  test_cli.py  test_core_algorithms.py  test_profile_rust_accel.py  test_rust_accel.py  test_rust_correctness_corpus.py  test_rust_packaging.py
