[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "sssp-research-lab-accel"
version = "1.0.0"
requires-python = ">=3.10"
description = "Optional Rust acceleration kernels for sssp-research-lab"

[tool.maturin]
module-name = "sssp_lab._sssp_accel"
python-source = "../../src"
features = ["pyo3/extension-module"]
